# silicon-oxide

./: Cargo.toml
src/: declarations.rs  error.rs  exp.rs  lib.rs  log.rs  meaning.rs  pure.rs  silicon.rs  state.rs  translate.rs
src/egg/: impl.rs  mod.rs  rewrite.rs
src/exp/: conditional.rs  language.rs  mod.rs  path_condition.rs
src/function/: mod.rs
src/heap/: heap.rs  merge.rs  mod.rs  normalise.rs
src/method/: mod.rs
src/pure/: meaning.rs  mod.rs  pure.rs  z3.rs
