[package]
name = "silicon-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silver-oxide = { path = "../silver-oxide" }
egg = "0.9.0"
num-bigint = "0.4.6"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
fxhash = "0.2.1"
